# ml-eng-test-w

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml
backend/: pyproject.toml
backend/app/: agent.py  main.py
data/: products.json  sample_queries.json
evaluation/: README.md
frontend/: package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
